allocate seems to be working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,29 @@
         "array": "c",
         "deque": "c",
         "string_view": "c",
-        "random": "c"
+        "random": "c",
+        "stdlib.h": "c",
+        "tuple": "c",
+        "__hash_table": "c",
+        "__tree": "c",
+        "bitset": "c",
+        "initializer_list": "c",
+        "list": "c",
+        "map": "c",
+        "regex": "c",
+        "set": "c",
+        "span": "c",
+        "stack": "c",
+        "string": "c",
+        "unordered_map": "c",
+        "unordered_set": "c",
+        "valarray": "c",
+        "utility": "c",
+        "iosfwd": "c",
+        "__bit_reference": "c",
+        "filesystem": "c",
+        "forward_list": "c",
+        "*.tcc": "c"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
