--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,8 @@
         "__bit_reference": "c",
         "filesystem": "c",
         "forward_list": "c",
-        "*.tcc": "c"
+        "*.tcc": "c",
+        "util.h": "c"
     },
     "C_Cpp.errorSquiggles": "Enabled"
 }
